Se agrego logica de casi todo y ya se crea el mapa y se envia los datos de este